--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,21 @@
+include /_mixins
+
 doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    +stylesheet_link_tag('application')
   body
-    block content
+    header
+      input#search
+  
+    main
+      block content
+  
+    +javascript_include_tag('vendor/bower')
+    +javascript_include_tag('vendor/backbone.localStorage')
+    +javascript_include_tag('handlebars_templates')
+    +javascript_include_tag('app')
+    +javascript_include_tag('models/card', 'collections/cards', 'views/simple_card.js')
+    +javascript_include_tag('models/list', 'collections/lists', 'views/list')
+    +javascript_include_tag('views/lists')
