--- a/handlebars/card.hbs
+++ b/handlebars/card.hbs
@@ -1,1 +1,7 @@
-{{title}}<a href="#">Edit</a>
+<h1>{{title}}</h1>
+<p>{{description}}</p>
+<ul>
+  {{#each comments}}
+    <li>{{this}}</li>
+  {{/each}}
+</ul>
