Add ability to add a new card.

--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -1,6 +1,9 @@
 @import 'mixins'
 @import 'whitespace-reset.css'
 
+.hidden
+  display: none
+
 body
   color: colors.body_text
   font-family: font
