Add ability to edit list title.

--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -1,4 +1,5 @@
-{{title}}<a href="#">Edit</a>
+<h1>{{title}}</h1>
+<input class="hidden" id="edit">
 <ul>
 </ul>
 <a href="#" id="add">Add a card...</a>
