Add ability to add new lists.

--- a/handlebars/new_list.hbs
+++ b/handlebars/new_list.hbs
@@ -1,3 +1,4 @@
-<section id="new">
-  <a href="#">Add a list...</a>
+<section>
+  <a href="#" id="addList">Add a list...</a>
+  <input id="addListInput" class="hidden">
 </section>
