Refactor ListView and specs.

--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
-<input class="hidden" id="edit">
+<input class="hidden" id="editListTitle">
 <ul>
 </ul>
-<a href="#" id="add">Add a card...</a>
-<input class="hidden" id="addInput">
+<a href="#" id="addCard">Add a card...</a>
+<input class="hidden" id="addCardInput">
