Add ability to delete list.

--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<h1>{{title}}<a href="#" id="deleteList">Delete</a></h1>
 <input class="hidden" id="editListTitle">
 <ul>
 </ul>
