--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -1,6 +1,6 @@
-<h1>{{title}}<a href="#" id="deleteList">Delete</a></h1>
-<input class="hidden" id="editListTitle">
+<h1>{{title}}<a href="#" class="deleteList">Delete</a></h1>
+<input class="editListTitle hidden">
 <ul>
 </ul>
-<a href="#" id="addCard">Add a card...</a>
-<input class="hidden" id="addCardInput">
+<a href="#" class="addCard">Add a card...</a>
+<input class="addCardInput hidden">
