--- a/handlebars/new_list.hbs
+++ b/handlebars/new_list.hbs
@@ -1,4 +1,4 @@
 <section>
-  <a href="#" id="addList">Add a list...</a>
-  <input id="addListInput" class="hidden">
+  <a href="#" class="addList">Add a list...</a>
+  <input class="addListInput hidden">
 </section>
