Change CSS reset.

--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -1,46 +1,46 @@
 @import 'mixins'
-@import 'whitespace-reset.css'
+// @import 'reset.css'
 
 .hidden
   display: none
 
-body
-  color: colors.body_text
-  font-family: font
-
-main
-  background: colors.main-bg
-  clear: both
-  margin: 0 auto
-  padding: 25px 40px
-  width: 800px
-
-h1
-  font-size: 2em
-  padding-bottom: 25px
-
-#index
-  ul
-    margin-left: -20px
-    padding-bottom: 40px
-
-    li
-      box-sizing: border-box
-      display: inline-block
-      padding: 0 0 25px 20px
-      vertical-align: top
-      width: 25%
-
-      img
-        display: block
-        margin-bottom: 10px
-        width: 100%
-
-      h2, h3, p
-        padding-bottom: 5px
-
-      h2
-        font-size: 1.5em
-
-      h3
-        font-size: 1.25em
+// body
+//   color: colors.body_text
+//   font-family: font
+//
+// main
+//   background: colors.main-bg
+//   clear: both
+//   margin: 0 auto
+//   padding: 25px 40px
+//   width: 800px
+//
+// h1
+//   font-size: 2em
+//   padding-bottom: 25px
+//
+// #index
+//   ul
+//     margin-left: -20px
+//     padding-bottom: 40px
+//
+//     li
+//       box-sizing: border-box
+//       display: inline-block
+//       padding: 0 0 25px 20px
+//       vertical-align: top
+//       width: 25%
+//
+//       img
+//         display: block
+//         margin-bottom: 10px
+//         width: 100%
+//
+//       h2, h3, p
+//         padding-bottom: 5px
+//
+//       h2
+//         font-size: 1.5em
+//
+//       h3
+//         font-size: 1.25em
