--- a/handlebars/simple_card.hbs
+++ b/handlebars/simple_card.hbs
@@ -1,2 +1,2 @@
-<span>{{title}}<a href="#">Edit</a></span>
+<span><a href="#{{id}}">{{title}}</a><a href="#" class="edit">Edit</a></span>
 <input class="hidden">
