--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,3 +24,4 @@ html
     +javascript_include_tag('models/list', 'collections/lists', 'views/list')
     +javascript_include_tag('views/lists')
     +javascript_include_tag('views/search')
+    +javascript_include_tag('routers/router')
