Update tests. Other refactoring.

--- a/handlebars/card.hbs
+++ b/handlebars/card.hbs
@@ -1,12 +1,12 @@
 <h1>{{title}}</h1>
-<input class="editCardTitle hidden">
+<input class="editCardTitleInput hidden">
 
 <p>Description <a href="#" class="editDescription">Edit</a></p>
 <p class="description">{{description}}</p>
 <input class="editDescriptionInput hidden">
 
 <label for="comment">Add a Comment</label>
-<input class="addComment" name="comment" placeholder="Write a comment...">
+<input class="addCommentInput" name="comment" placeholder="Write a comment...">
 
 <ul>
   {{#each comments}}
