--- a/handlebars/simple_card.hbs
+++ b/handlebars/simple_card.hbs
@@ -1,2 +1,2 @@
-<span><a href="#{{id}}">{{title}}</a><a href="#" class="edit">Edit</a></span>
-<input class="hidden">
+<span class="title"><a href="#{{id}}">{{title}}</a><a href="#" class="editTitle">Edit</a></span>
+<input class="editTitleInput hidden">
