--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -1,5 +1,5 @@
 <h1>{{title}}<a href="#" class="deleteList">Delete</a></h1>
-<input class="editListTitle hidden">
+<input class="editListTitleInput hidden">
 <ul>
 </ul>
 <a href="#" class="addCard">Add a card...</a>
