Add ability to close CardView and delete card from CardView.

--- a/handlebars/card.hbs
+++ b/handlebars/card.hbs
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<h1>{{title}}<a href="#" class="closeCard">Close</a></h1>
 <input class="editCardTitleInput hidden">
 
 <p>Description <a href="#" class="editDescription">Edit</a></p>
@@ -17,3 +17,5 @@
     </li>
   {{/each}}
 </ul>
+
+<a href="#" class="deleteCard">Delete Card</a>
