Add partial styles.

--- a/handlebars/simple_card.hbs
+++ b/handlebars/simple_card.hbs
@@ -1,2 +1,2 @@
-<span class="title"><a href="#{{id}}">{{title}}</a><a href="#" class="editTitle">Edit</a></span>
+<span class="editTitle fa fa-pencil" aria-hidden="true"></span><a href="#{{id}}"><span class="title">{{title}}</span></a>
 <input class="editTitleInput hidden">
