--- a/views/_mixins.jade
+++ b/views/_mixins.jade
@@ -1,6 +1,9 @@
 mixin stylesheet_link_tag(src)
   link(rel='stylesheet' href='/stylesheets/#{src}.css')
-  
+
+mixin remote_stylesheet_link_tag(src)
+  link(rel='stylesheet' href='#{src}')
+
 mixin javascript_include_tag(src, ...sources)
   script(src='/javascripts/#{src}.js')
   
