--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,151 @@
+@import 'reset.css';
+body {
+  font-family: 'Open Sans', sans-serif;
+}
 .hidden {
   display: none;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+header {
+  background-color: #005c99;
+  padding: 8px;
+  position: relative;
+  text-align: center;
+  color: #f5f4f5;
+}
+header .searchWrapper {
+  float: left;
+}
+header .searchWrapper span {
+  margin-right: 8px;
+}
+header .searchWrapper input {
+  background-color: #4389b7;
+  border: 0;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 1em;
+  height: 25px;
+  padding: 0 8px;
+  width: 150px;
+}
+header .logo {
+  font-family: 'Pacifico', cursive;
+  font-size: 1.5em;
+  vertical-align: middle;
+}
+header ul {
+  background-color: #dee0e2;
+  border-radius: 5px;
+  color: #444;
+  position: absolute;
+  top: 40px;
+  left: 30px;
+  width: 300px;
+  z-index: 2;
+  box-shadow: 0 2px 7px #000;
+}
+header ul li {
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 1px 1px #aaa;
+  margin: 8px 0;
+  padding: 8px;
+  position: relative;
+  margin: 8px;
+}
+header ul li:hover {
+  background-color: #f2f2f2;
+}
+main {
+  background-color: #0079bf;
+  height: 100vh;
+}
+main section:last-child {
+  background-color: #0061a1;
+}
+main section:last-child a {
+  color: #f5f4f5;
+  font-size: 1em;
+  margin: 0;
+}
+section {
+  background-color: #dee0e2;
+  border-radius: 5px;
+  margin: 12px;
+  padding: 8px;
+  float: left;
+  width: 250px;
+}
+section h1 {
+  font-weight: bold;
+}
+section h1:hover {
+  cursor: pointer;
+}
+section h1 > a {
+  float: right;
+  height: 12px;
+  margin-right: 5px;
+  overflow: hidden;
+  position: relative;
+  text-indent: 9999px;
+  transform: rotate(45deg);
+  width: 12px;
+}
+section h1 > a:before,
+section h1 > a:after {
+  background-color: #808080;
+  content: '';
+  position: absolute;
+}
+section h1 > a:before {
+  bottom: 0;
+  left: 50%;
+  margin-left: -1px;
+  top: 0;
+  width: 2px;
+}
+section h1 > a:after {
+  height: 2px;
+  left: 0;
+  margin-top: -1px;
+  right: 0;
+  top: 50%;
+}
+section > a {
+  color: #808080;
+  display: block;
+  font-size: 0.8em;
+  margin-top: 15px;
+}
+section ul li {
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 1px 1px #aaa;
+  margin: 8px 0;
+  padding: 8px;
+  position: relative;
+}
+section ul li:hover {
+  background-color: #f2f2f2;
+}
+section ul li:hover .editTitle {
+  display: block;
+  background-color: #f2f2f2;
+}
+section ul li .editTitle {
+  border-radius: 3px;
+  color: #808080;
+  display: none;
+  padding: 3px;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+section ul li .editTitle:hover {
+  background-color: #e0e0e0;
 }
