--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -1,46 +1,158 @@
 @import 'mixins'
-// @import 'reset.css'
+@import 'reset.css'
+
+
+// General
+// ------------
+
+body
+  font-family: primary_font
 
 .hidden
   display: none
 
-// body
-//   color: colors.body_text
-//   font-family: font
-//
-// main
-//   background: colors.main-bg
-//   clear: both
-//   margin: 0 auto
-//   padding: 25px 40px
-//   width: 800px
-//
-// h1
-//   font-size: 2em
-//   padding-bottom: 25px
-//
-// #index
-//   ul
-//     margin-left: -20px
-//     padding-bottom: 40px
-//
-//     li
-//       box-sizing: border-box
-//       display: inline-block
-//       padding: 0 0 25px 20px
-//       vertical-align: top
-//       width: 25%
-//
-//       img
-//         display: block
-//         margin-bottom: 10px
-//         width: 100%
-//
-//       h2, h3, p
-//         padding-bottom: 5px
-//
-//       h2
-//         font-size: 1.5em
-//
-//       h3
-//         font-size: 1.25em
+a
+  color: inherit
+  text-decoration: none
+
+
+// Header
+// ------------
+
+header
+  background-color: colors.header_bg
+  padding: 8px
+  position: relative
+  text-align: center
+  color: colors.heading_text
+
+  .searchWrapper
+    float: left
+
+    span
+      margin-right: 8px
+
+    input
+      background-color: colors.search_bg
+      border: 0
+      border-radius: 3px
+      color: colors.search_text
+      font-size: 1em
+      height: 25px
+      padding: 0 8px
+      width: 150px
+
+  .logo
+    font-family: logo_font
+    font-size: 1.5em
+    vertical-align: middle
+
+  ul
+    background-color: colors.list_bg
+    border-radius: 5px
+    color: colors.primary_text
+    position: absolute
+    top: 40px
+    left: 30px
+    width: 300px
+    z-index: 2
+    box-shadow: 0 2px 7px black
+
+    li
+      card()
+      margin: 8px
+
+
+// Main
+// ------------
+
+main
+  background-color: colors.body_bg
+  height: 100vh
+
+  section:last-child
+    background-color: colors.secondary_bg
+
+    a
+      color: colors.heading_text
+      font-size: 1em
+      margin: 0
+
+// List
+// ------------
+
+section
+  background-color: colors.list_bg
+  border-radius: 5px
+  margin: 12px
+  padding: 8px
+  float: left
+  width: section_width
+
+  h1
+    font-weight: bold
+
+    &:hover
+      cursor: pointer
+
+    > a // Delete button
+      float: right
+      height: 12px
+      margin-right: 5px
+      overflow: hidden
+      position: relative
+      text-indent: 9999px
+      transform: rotate(45deg)
+      width: 12px
+
+      &:before,
+      &:after
+        background-color: colors.secondary_text
+        content: ''
+        position: absolute
+
+      &:before
+        bottom: 0
+        left: 50%
+        margin-left: -1px
+        top: 0
+        width: 2px
+
+      &:after
+        height: 2px
+        left: 0
+        margin-top: -1px
+        right: 0
+        top: 50%
+
+  > a
+    color: colors.secondary_text
+    display: block
+    font-size: .8em
+    margin-top: 15px
+
+
+// Card
+// ------------
+
+section
+  ul
+    li
+      card()
+
+      &:hover
+        .editTitle
+          display: block
+          background-color: darken(colors.card_bg, 5)
+
+      .editTitle
+        border-radius: 3px
+        color: colors.secondary_text
+        display: none
+        padding: 3px
+        position: absolute
+        right: 5px
+        top: 5px
+
+        &:hover
+          background-color: darken(colors.card_bg, 12)
