--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -1,4 +1,7 @@
-<h1>{{title}}<a href="#" class="deleteList">Delete</a></h1>
+<a href="#" class="deleteList">Delete</a>
+<a href="#" class="cancelDeleteList hidden">Cancel Delete</a>
+<a href="#" class="confirmDeleteList hidden">Confirm Delete</a>
+<h1>{{title}}</h1>
 <input class="editListTitleInput hidden">
 <ul>
 </ul>
