--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,8 +21,8 @@ html
   
     main
       block content
-      
-    aside#cardModal
+     
+    aside(class="hidden")
   
     +javascript_include_tag('vendor/bower')
     +javascript_include_tag('vendor/backbone.localStorage')
