--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -149,3 +149,100 @@ section
 
         &:hover
           background-color: darken(colors.card_bg, 12)
+
+
+// Card Modal
+// ------------
+
+aside
+  background-color: rgba(0, 0, 0, .5)
+  bottom: 0
+  content: ""
+  left: 0
+  position: fixed
+  right: 0
+  top: 0
+  z-index: 1
+
+  .container
+    background-color: colors.cardview_bg
+    border-radius: 5px
+    box-sizing: border-box
+    left: 50%
+    margin-left: -275px
+    padding: 20px 15px
+    position: absolute
+    top: 60px
+    width: 550px
+    z-index: 2
+
+    h1
+      font-size: 1.5em
+      font-weight: bold
+      margin-bottom: 5px
+
+    .closeCard
+      closeButton()
+
+    h2
+      display: inline-block
+      font-size: 1.15em
+      font-weight: bold
+      margin-bottom: 10px
+      margin-top: 35px
+
+      span
+        margin-right: 10px
+
+    .description
+      &:hover
+        .editDescription
+          display: inline-block
+
+      .editDescription
+        border-radius: 3px
+        color: colors.secondary_text
+        display: none
+        margin-left: 10px
+        padding: 3px
+
+        &:hover
+          background-color: darken(colors.cardview_bg, 5)
+
+    .comment
+      card()
+      margin-top: 12px
+
+      &:hover
+        background-color: colors.card_bg
+
+    .commentDate
+      color: colors.secondary_text
+      font-size: .8em
+      margin-top: 3px
+
+      a
+        text-decoration: underline
+
+    .deleteButtons
+      height: 40px
+      margin-top: 50px
+      position: relative
+
+    .deleteCard,
+    .confirmDeleteCard,
+    .cancelDeleteCard
+      position: absolute
+      width: 150px
+
+    .deleteCard
+      deleteButton()
+      left: 0
+
+    .cancelDeleteCard
+      greenButton()
+      left: 175px
+
+    .confirmDeleteCard
+      deleteButton()
+      left: 350px
