--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -2,8 +2,8 @@
 <a href="#" class="cancelDeleteList hidden">Cancel Delete</a>
 <a href="#" class="confirmDeleteList hidden">Confirm Delete</a>
 <h1>{{title}}</h1>
-<input class="editListTitleInput hidden">
+<textarea class="editListTitleInput hidden"></textarea>
 <ul>
 </ul>
 <a href="#" class="addCard">Add a card...</a>
-<input class="addCardInput hidden">
+<textarea class="addCardInput hidden"></textarea>
