--- a/handlebars/new_list.hbs
+++ b/handlebars/new_list.hbs
@@ -1,4 +1,4 @@
 <section>
   <a href="#" class="addList">Add a list...</a>
-  <input class="addListInput hidden">
+  <textarea class="addListInput hidden"></textarea>
 </section>
