--- a/handlebars/simple_card.hbs
+++ b/handlebars/simple_card.hbs
@@ -1,2 +1,2 @@
 <span class="editTitle fa fa-pencil" aria-hidden="true"></span><a href="#{{id}}"><span class="title">{{title}}</span></a>
-<input class="editTitleInput hidden">
+<textarea class="editTitleInput hidden"></textarea>
