--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,6 +10,20 @@ a {
   color: inherit;
   text-decoration: none;
 }
+textarea {
+  background-color: inherit;
+  border: 1px solid #aaa;
+  padding: 4px 6px;
+  border-radius: 3px;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 1.2em;
+  color: inherit;
+  resize: none;
+}
+textarea:focus {
+  outline: 0;
+}
 header {
   background-color: #005c99;
   color: #f5f4f5;
