--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -16,6 +16,20 @@ a
   color: inherit
   text-decoration: none
 
+textarea
+  background-color: inherit
+  border: 1px solid colors.box_shadow
+  padding: 4px 6px
+  border-radius: 3px
+  width: 100%
+  box-sizing: border-box
+  font-size: 1.2em
+  color: inherit
+  resize: none
+
+  &:focus
+    outline: 0
+
 
 // Header
 // ------------
