--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -93,6 +93,7 @@ main
       font-size: 1em
       margin: 0
 
+
 // List
 // ------------
 
@@ -107,15 +108,18 @@ section
 
   h1
     font-weight: bold
+    font-size: 1.25em
+    margin-bottom: 7px
 
     &:hover
       cursor: pointer
 
+  .editListTitleInput
+    width: 90%
+
   .addCard
     color: colors.secondary_text
-    display: block
     font-size: .8em
-    margin-top: 15px
 
   .deleteList
     closeButton()
@@ -147,6 +151,7 @@ section
   ul
     li
       card()
+      line-height: 1.25em
 
       &:hover
         .editTitle
@@ -160,11 +165,10 @@ section
         padding: 3px
         position: absolute
         right: 5px
-        top: 5px
+        top: 7px
 
         &:hover
           background-color: darken(colors.card_bg, 12)
-
 
 // Card Modal
 // ------------
@@ -208,6 +212,9 @@ aside
 
       span
         margin-right: 10px
+
+    p
+      line-height: 1.25em
 
     .description
       &:hover
