--- a/public/stylesheets/mixins.styl
+++ b/public/stylesheets/mixins.styl
@@ -13,7 +13,7 @@ colors = {
   cardview_bg: #eaecee,
   heading_text: #f5f4f5,
   search_text: #ffffff,
-  primary_text: #444444,
+  primary_text: #4d4d4d,
   secondary_text: #808080,
   box_shadow: #aaaaaa,
   delete_bg: #e95b4b,
