--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -6,8 +6,8 @@
 // ------------
 
 body
+  color: colors.primary_text
   font-family: $primary_font
-  height: 100vh
 
 .hidden
   display: none
@@ -18,14 +18,14 @@ a
 
 textarea
   background-color: inherit
-  border: 1px solid colors.box_shadow
-  padding: 4px 6px
-  border-radius: 3px
-  width: 100%
   box-sizing: border-box
-  font-size: 1.2em
+  border: 1px solid colors.box_shadow
+  border-radius: 3px
   color: inherit
+  font-size: 1.2em
+  padding: 4px 6px
   resize: none
+  width: 100%
 
   &:focus
     outline: 0
@@ -93,6 +93,9 @@ main
 
   section:last-child
     background-color: colors.secondary_bg
+
+    .addListInput
+      color: colors.heading_text
 
     a
       color: colors.heading_text
@@ -224,6 +227,7 @@ aside
       span
         margin-right: 10px
 
+    h1,
     p
       line-height: 1.25em
 
