Give search results a max height.

--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -71,6 +71,8 @@ header
     box-shadow: 0 2px 7px black
     color: colors.primary_text
     left: 30px
+    max-height: 65vh
+    overflow: scroll
     position: absolute
     top: 40px
     width: 300px
