--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -61,6 +61,8 @@ header ul {
   box-shadow: 0 2px 7px #000;
   color: #4d4d4d;
   left: 30px;
+  max-height: 65vh;
+  overflow: scroll;
   position: absolute;
   top: 40px;
   width: 300px;
