--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -206,6 +206,8 @@ aside
     box-sizing: border-box
     left: 50%
     margin-left: -275px
+    max-height: 85vh
+    overflow: scroll
     padding: 20px 15px
     position: absolute
     top: 60px
