Change button text in card modal.

--- a/handlebars/card.hbs
+++ b/handlebars/card.hbs
@@ -23,6 +23,6 @@
 
 <div class="deleteButtons">
   <a href="#" class="deleteCard">Delete Card</a>
-  <a href="#" class="cancelDeleteCard hidden">Cancel Delete</a>
-  <a href="#" class="confirmDeleteCard hidden">Confirm Delete</a>
+  <a href="#" class="cancelDeleteCard hidden">Cancel</a>
+  <a href="#" class="confirmDeleteCard hidden">Confirm</a>
 </div>
