--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -17,6 +17,7 @@ textarea {
   border-radius: 3px;
   color: inherit;
   font-size: 1.2em;
+  height: 5em;
   padding: 4px 6px;
   resize: none;
   width: 100%;
@@ -190,7 +191,7 @@ section .confirmDeleteList:hover {
   background-color: #e64634;
 }
 section ul {
-  max-height: 77vh;
+  max-height: 72vh;
   overflow: scroll;
 }
 section ul li {
@@ -248,6 +249,12 @@ aside .container h1 {
   font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 5px;
+}
+aside .container h1:hover {
+  cursor: pointer;
+}
+aside .container .editCardTitleInput {
+  width: 90%;
 }
 aside .container .closeCard {
   float: right;
@@ -375,4 +382,9 @@ aside .container .confirmDeleteCard {
 }
 aside .container .confirmDeleteCard:hover {
   background-color: #e64634;
+}
+@media (max-height: 700px) {
+  section ul {
+    max-height: 65vh;
+  }
 }
