--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,6 +25,7 @@ html
     aside(class="hidden")
   
     +javascript_include_tag('vendor/bower')
+    +javascript_include_tag('vendor/jquery-ui.min')
     +javascript_include_tag('vendor/backbone.localStorage')
     +javascript_include_tag('handlebars_templates')
     +javascript_include_tag('app')
