Make cards and lists sortable in the UI.
Changes don't yet persist to storage.

--- a/handlebars/list.hbs
+++ b/handlebars/list.hbs
@@ -3,7 +3,7 @@
 <a href="#" class="confirmDeleteList hidden">Confirm Delete</a>
 <h1>{{title}}</h1>
 <textarea class="editListTitleInput hidden"></textarea>
-<ul>
+<ul class="sortableCards">
 </ul>
 <a href="#" class="addCard">Add a card...</a>
 <textarea class="addCardInput hidden"></textarea>
