--- a/handlebars/new_list.hbs
+++ b/handlebars/new_list.hbs
@@ -1,4 +1,4 @@
-<section>
+<section class="noSort">
   <a href="#" class="addList">Add a list...</a>
   <textarea class="addListInput hidden"></textarea>
 </section>
