Fix bug that prevented you from transferring a card to an empty list.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -195,6 +195,7 @@ section .confirmDeleteList:hover {
 }
 section ul {
   max-height: 72vh;
+  min-height: 25px;
   overflow: scroll;
 }
 section ul li {
